--- a/templates/stages.yaml
+++ b/templates/stages.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: {{ include "kargo-boilerplate.name" $ }}
   annotations: {{ toYaml .annotations | nindent 4 }}
 spec:
-  subscriptions: {{ toYaml .subscriptions | nindent 4 }}
+  requestedFreight: {{ toYaml .requestedFreight | nindent 4 }}
   promotionMechanisms: {{ toYaml .promotionMechanisms | nindent 4 }}
   {{- with .verification }}
   verification:
