--- a/templates/project.yaml
+++ b/templates/project.yaml
@@ -1,6 +1,8 @@
+{{- if .Values.project.create }}
 apiVersion: kargo.akuity.io/v1alpha1
 kind: Project
 metadata:
   name: {{ include "kargo-boilerplate.name" . }}
 spec:
   promotionPolicies: {{ toYaml .Values.project.promotionPolicies | nindent 4 }}
+{{- end }}
