--- a/apps/kargo.yaml
+++ b/apps/kargo.yaml
@@ -59,7 +59,7 @@ spec:
                       name: '{{.appName}}'
                     sources:
                       direct: {{empty .upstreamStages}}
-                      {{- if not empty .upstreamStages }}
+                      {{- if not (empty .upstreamStages) }}
                       stages: {{.upstreamStages}}
                       {{- end }}
                 promotionMechanisms:
