switch to my repo
Signed-off-by: Justin Marquis <justin@akuity.io>

--- a/config/apps/blake.yaml
+++ b/config/apps/blake.yaml
@@ -1,4 +1,4 @@
 appName: oci-guestbook
 registry: oci://registry-1.docker.io/blaaake
 chart: helm-guestbook
-image: ghcr.io/dhpup/guestbook
+image: ghcr.io/34fathombelow/akuity_guestbook
