--- a/apps/kargo.yaml
+++ b/apps/kargo.yaml
@@ -48,7 +48,7 @@ spec:
               create: false
             warehouse:
               create: false
-            nameOverride: '{{.appName}}'
+            nameOverride: '{{.appName}}-{{.stageName}}'
             stages:
               - name: '{{.appName}}'
                 annotations:
