--- a/templates/stages.yaml
+++ b/templates/stages.yaml
@@ -2,7 +2,7 @@
 apiVersion: kargo.akuity.io/v1alpha1
 kind: Stage
 metadata:
-  name: {{ .name }}-test
+  name: {{ .name }}
   namespace: {{ include "kargo-boilerplate.name" $ }}
   annotations: {{ toYaml .annotations | nindent 4 }}
 spec:
