--- a/apps/kargo.yaml
+++ b/apps/kargo.yaml
@@ -59,7 +59,7 @@ spec:
                       name: '{{.appName}}'
                     sources:
                       {{- if not (empty .upstreamStages) }}
-                      stages: {{.upstreamStages}}
+                      stages: '{{.appName}}-{{.upstreamStages}}'
                       {{- end }}
                 promotionMechanisms:
                   argoCDAppUpdates:
