--- a/apps/kargo.yaml
+++ b/apps/kargo.yaml
@@ -58,8 +58,9 @@ spec:
                       kind: Warehouse
                       name: '{{.appName}}'
                     sources:
+                      direct: {{empty .upstreamStages}}
                       {{- if not (empty .upstreamStages) }}
-                      stages: {{.appName}}-{{.upstreamStages}}
+                      stages: {{.upstreamStages}}
                       {{- end }}
                 promotionMechanisms:
                   argoCDAppUpdates:
