--- a/apps/kargo.yaml
+++ b/apps/kargo.yaml
@@ -61,7 +61,7 @@ spec:
                       {{- if (empty .upstreamStages) }}
                       direct: true
                       {{else}}
-                      stages: '{{.appName}}-{{.stageName}}'
+                      stages: {{.appName}}-{{.stageName}}
                       {{- end }}
                 promotionMechanisms:
                   argoCDAppUpdates:
